devops/k8s/template/server/10.server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    namespace: %NAMESPACE%
    name: %CI_PROJECT_NAME%-server-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
        nginx.ingress.kubernetes.io/rewrite-target: /api/$2
        nginx.ingress.kubernetes.io/secure-servers: 'true'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    tls:
        - hosts:
              - %PROJECT_DOMAIN%
          secretName: %NAMESPACE%-tls
    rules:
        - host: %PROJECT_DOMAIN%
          http:
              paths:
                  - path: /api(/|$)(.*)
                    backend:
                        serviceName: %CI_PROJECT_NAME%-server-service
                        servicePort: 3000
